--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,7 @@
 {
     "extends": [
         "@nuxtjs/eslint-config-typescript",
-        "plugin:vue/vue3-recommended",
+        "plugin:vue/vue3-recommended"
     ],
     "rules": {
         "vue/no-multiple-template-root": "off",
