--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
+    "@tailwindcss/forms": "^0.5.3",
     "@types/node": "^18.15.11",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.36.0",
